--- a/SnakeClient/Makefile
+++ b/SnakeClient/Makefile
@@ -1,14 +1,14 @@
-CXXFLAGS += -g -std=c++11 -pthread 
+CXXFLAGS += -g -std=c++11 -pthread -lncurses
 DB ?= gdb
 
-SRC = $(wildcard *.cpp) 
+SRC = $(wildcard *.cpp)
 
 client: main.o Board.o Client.o User.o
-	@$(CXX) $(CXXFLAGS) -lncurses -o SnakeClient main.o Board.o Client.o User.o
+	@$(CXX) $(CXXFLAGS) -o SnakeClient main.o Board.o Client.o User.o
 
 %.o: %.cpp
 	@echo "Compiling $*"
 	@$(CXX) $(CXXFLAGS) -c $*.cpp -o $*.o
 
 clean:
-	@rm -rf $(SRC:%.cpp=%.o) SnakeClient
+	@rm -rf $(SRC:%.cpp=%.o)
